--- a/.drone.yml
+++ b/.drone.yml
@@ -194,14 +194,14 @@ steps:
   environment:
     PORT: 3001
   image: grafana/build-container:1.4.9
-  name: end-to-end-tests-server
+  name: grafana-server
 - commands:
   - apt-get install -y netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-dashboards-suite
 - commands:
@@ -210,7 +210,7 @@ steps:
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-smoke-tests-suite
 - commands:
@@ -219,7 +219,7 @@ steps:
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-panels-suite
 - commands:
@@ -228,7 +228,7 @@ steps:
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-various-suite
 - commands:
@@ -276,11 +276,11 @@ steps:
   - yarn wait-on http://$HOST:$PORT
   - pa11y-ci --config .pa11yci-pr.conf.js
   depends_on:
-  - end-to-end-tests-server
+  - grafana-server
   environment:
     GRAFANA_MISC_STATS_API_KEY:
       from_secret: grafana_misc_stats_api_key
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
     PORT: 3001
   failure: always
   image: grafana/docker-puppeteer:1.0.0
@@ -624,14 +624,14 @@ steps:
   environment:
     PORT: 3001
   image: grafana/build-container:1.4.9
-  name: end-to-end-tests-server
+  name: grafana-server
 - commands:
   - apt-get install -y netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-dashboards-suite
 - commands:
@@ -640,7 +640,7 @@ steps:
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-smoke-tests-suite
 - commands:
@@ -649,7 +649,7 @@ steps:
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-panels-suite
 - commands:
@@ -658,7 +658,7 @@ steps:
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-various-suite
 - commands:
@@ -723,11 +723,11 @@ steps:
   - yarn wait-on http://$HOST:$PORT
   - pa11y-ci --config .pa11yci.conf.js --json > pa11y-ci-results.json
   depends_on:
-  - end-to-end-tests-server
+  - grafana-server
   environment:
     GRAFANA_MISC_STATS_API_KEY:
       from_secret: grafana_misc_stats_api_key
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
     PORT: 3001
   failure: ignore
   image: grafana/docker-puppeteer:1.0.0
@@ -808,7 +808,7 @@ steps:
 - commands:
   - ./bin/grabpl upload-cdn --edition oss --bucket "grafana-static-assets"
   depends_on:
-  - end-to-end-tests-server
+  - grafana-server
   environment:
     GCP_GRAFANA_UPLOAD_KEY:
       from_secret: gcp_key
@@ -1231,14 +1231,14 @@ steps:
   environment:
     PORT: 3001
   image: grafana/build-container:1.4.9
-  name: end-to-end-tests-server
+  name: grafana-server
 - commands:
   - apt-get install -y netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite --tries 3
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-dashboards-suite
 - commands:
@@ -1247,7 +1247,7 @@ steps:
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-smoke-tests-suite
 - commands:
@@ -1256,7 +1256,7 @@ steps:
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-panels-suite
 - commands:
@@ -1265,7 +1265,7 @@ steps:
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-various-suite
 - commands:
@@ -1312,7 +1312,7 @@ steps:
 - commands:
   - ./bin/grabpl upload-cdn --edition oss --bucket "$${PRERELEASE_BUCKET}/artifacts/static-assets"
   depends_on:
-  - end-to-end-tests-server
+  - grafana-server
   environment:
     GCP_GRAFANA_UPLOAD_KEY:
       from_secret: gcp_key
@@ -1835,14 +1835,14 @@ steps:
     PORT: 3001
     RUNDIR: e2e/tmp-grafana-enterprise
   image: grafana/build-container:1.4.9
-  name: end-to-end-tests-server
+  name: grafana-server
 - commands:
   - apt-get install -y netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite --tries 3
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-dashboards-suite
 - commands:
@@ -1851,7 +1851,7 @@ steps:
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-smoke-tests-suite
 - commands:
@@ -1860,7 +1860,7 @@ steps:
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-panels-suite
 - commands:
@@ -1869,7 +1869,7 @@ steps:
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-various-suite
 - commands:
@@ -2987,14 +2987,14 @@ steps:
   environment:
     PORT: 3001
   image: grafana/build-container:1.4.9
-  name: end-to-end-tests-server
+  name: grafana-server
 - commands:
   - apt-get install -y netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite --tries 3
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-dashboards-suite
 - commands:
@@ -3003,7 +3003,7 @@ steps:
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-smoke-tests-suite
 - commands:
@@ -3012,7 +3012,7 @@ steps:
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-panels-suite
 - commands:
@@ -3021,7 +3021,7 @@ steps:
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-various-suite
 - commands:
@@ -3068,7 +3068,7 @@ steps:
 - commands:
   - ./bin/grabpl upload-cdn --edition oss --bucket "grafana-static-assets"
   depends_on:
-  - end-to-end-tests-server
+  - grafana-server
   environment:
     GCP_GRAFANA_UPLOAD_KEY:
       from_secret: gcp_key
@@ -3519,14 +3519,14 @@ steps:
     PORT: 3001
     RUNDIR: e2e/tmp-grafana-enterprise
   image: grafana/build-container:1.4.9
-  name: end-to-end-tests-server
+  name: grafana-server
 - commands:
   - apt-get install -y netcat
   - ./bin/grabpl e2e-tests --port 3001 --suite dashboards-suite --tries 3
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-dashboards-suite
 - commands:
@@ -3535,7 +3535,7 @@ steps:
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-smoke-tests-suite
 - commands:
@@ -3544,7 +3544,7 @@ steps:
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-panels-suite
 - commands:
@@ -3553,7 +3553,7 @@ steps:
   depends_on:
   - package
   environment:
-    HOST: end-to-end-tests-server
+    HOST: grafana-server
   image: cypress/included:9.2.0
   name: end-to-end-tests-various-suite
 - commands:
@@ -4175,6 +4175,6 @@ kind: secret
 name: gcp_upload_artifacts_key
 ---
 kind: signature
-hmac: 00de7a9339c4f19716c6edb0ad6578aaff95e5850cc7c1035d1cdf71c80af283
+hmac: 6c7f587ebfdbeadeb6bf63b19df5654737fae9fdd21e9e97e25758e9fb2246cb
 
 ...
